--- a/css/philpage.css
+++ b/css/philpage.css
@@ -1,11 +1,3 @@
-.banner {
-  background-image: url('../images/mountain.jpg');
-  background-size: cover;
-  color: #FFFFFF;
-  padding-bottom: 25%;
-  padding-top: 25%;
-}
-
 .options {
 	background-color:#686868;
 	padding-bottom: 2%;
@@ -45,7 +37,16 @@ video {
 }
 
 body{
+	
 	background-color: #686868;
+	height: 100%;
+	background-image: url('../images/mountain.jpg');
+	background-size: cover;
+	background-position: center;
+	color: #FFFFFF;
+}
+html{
+	height: 100%;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
