--- a/portfolio/css/philpage.css
+++ b/portfolio/css/philpage.css
@@ -29,35 +29,29 @@ a:hover {
 	color:#FFAA22;
 }
 
-.row{
-	padding-top: 25%;
-}
-
 img {
 	width: 100%;
 	height: auto;
-	box-shadow: 2px 2px 4px #3c3c3c;
 }
 video {
 	width:100%;
 	height: auto;
-	box-shadow: 2px 2px 4px #3c3c3c;
 }
 
 body{
 	
 	background-color: #686868;
 	height: 100%;
-	background-image: url('../images/mountain.jpg');
 	background-size: cover;
 	background-position: center;
 	color: #FFFFFF;
+	font-size: 20px;
 }
 html{
 	height: 100%;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
+/* Hide scrollbar for Chrome, Safari and Opera 
 body::-webkit-scrollbar {
   display: none;
-}
+} /**/
