--- a/portfolio/css/philpage.css
+++ b/portfolio/css/philpage.css
@@ -19,6 +19,11 @@
 	
 }
 
+code {
+	background-color: #686868;
+	color: #FFAA22;
+}
+
 .description{
 	padding-right: 2%;
 	text-shadow: 2px 2px 4px #3c3c3c;
